<resources>
    <string name="app_name">Archaeology Fieldwork</string>
    <string name="button_addhillfort">Add Hillfort</string>
    <string name="button_savehillfort">Save Hillfort</string>
    <string name="button_addImage">Add Image</string>
    <string name="button_changeImage">Change Image</string>
    <string name="button_location">Set Location</string>
    <string name="button_changeLocation">Change Location</string>
    <string name="button_login">Login</string>
    <string name="button_signUp">Sign Up</string>
    <string name="button_addUser">Add User</string>
    <string name="menu_addhillfort">Add</string>
    <string name="menu_cancelhillfort">Cancel</string>
    <string name="menu_deletehillfort">Delete</string>
    <string name="menu_add">Add</string>
    <string name="menu_map">Map</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_saveHillfort">Save</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Hillfort Description</string>
    <string name="toast">Please Enter a Title</string>
    <string name="select_hillfort_image">Select Hillfort image</string>
    <string name="title_activity_map">Map</string>
    <string name="loader_text">Hillfort App</string>
    <string name="title_activity_hillfort_maps">Map of All Hillforts</string>
    <string name="hillfort_image_placeholder">Hillfort Image</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>
    <string name="title_activity_login"> Signup/Login to Placemark</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="button_savePass">Save Password</string>
    <string name="button_cancelPass">Cancel</string>
    <string name="button_forgotPass">Forgot Password</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="search_hillfort">Search for a Hillfort</string>
    <string name="search_hint">Search...</string>
    <string name="hillfort_fav">Favourites</string>
</resources>
