<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.hillfort.MainView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/hillfortLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:titleTextColor="@color/colorPrimary" />

            </com.google.android.material.appbar.AppBarLayout>

            <EditText
                android:id="@+id/hillfortTitle"
                android:layout_width="310dp"
                android:layout_height="49dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:autofillHints=""
                android:hint="@string/hint_hillfortTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/hillfortDescription"
                android:layout_width="311dp"
                android:layout_height="81dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_hillfortDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortTitle" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="348dp"
                android:layout_height="45dp"
                android:layout_marginTop="28dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortDescription" />

            <ImageView
                android:id="@+id/hillfortImage"
                android:layout_width="325dp"
                android:layout_height="155dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                app:srcCompat="@mipmap/ic_launcher" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="131dp">

                <TextView
                    android:id="@+id/lat"
                    android:layout_width="61dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="28dp"
                    android:text="@string/latitude"
                    app:layout_constraintEnd_toStartOf="@+id/hillfortLat"
                    app:layout_constraintHorizontal_bias="0.299"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hillfortLat"
                    android:layout_width="219dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="28dp"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lng"
                    android:layout_width="80dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/longitude"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lat"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/hillfortLng"
                    android:layout_width="218dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="20dp"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.684"
                    app:layout_constraintStart_toEndOf="@+id/lng"
                    app:layout_constraintTop_toBottomOf="@+id/hillfortLat" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="344dp"
                android:layout_height="237dp"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent" />

            <RatingBar
                android:id="@+id/simpleRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/hillfortFav"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="start|top"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:text="Mark as Favourite:"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/favourite"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="Favourite"
                android:onClick="onCheckboxClicked"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>